# weavers

./: .gitignore  hackathon.md  pyproject.toml  repo-spec.md
apps/backend/: .env.example  requirements.txt
apps/backend/app/: __init__.py  config.py  main.py  orchestrator.py  schemas.py
apps/backend/app/agents/: persona_creation.py
apps/backend/app/memory/: local_persona_store.py  redis_agent_memory.py
apps/backend/app/providers/: router.py
apps/backend/app/scripts/: check_services.py  smoke_test_intake_to_simulation.py
apps/backend/app/tests/: test_copilot_proxy.py
apps/frontend/: DESIGN_KIT.md
apps/frontend/src/: App.tsx  styles.css
apps/frontend/src/components/: BenchmarkComparison.tsx  ErrorBoundary.tsx  PersonaReactionCard.tsx  SegmentInsightCard.tsx  SentimentBreakdown.tsx  SettingsPanel.tsx  SimulationControls.tsx
apps/frontend/src/pages/: SimulationPage.tsx
apps/frontend/src/services/: simulationClient.ts
apps/frontend/src/styles/: tokens.css
data/personas/: personas.json
data/personas/sets/: cal-1780858737.json  cal12-1780859017.json  cal6-1780859446.json
persona_pipeline/: __init__.py  adapters.py  agents.py  app.py  cli.py  generator.py  openai_agent.py  parser.py  pipeline.py  population.py  pums_store.py  safety.py  schemas.py  weave_support.py
